--- a/ZooSite/package.json
+++ b/ZooSite/package.json
@@ -3,5 +3,9 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {},
-  "dependencies": { "jquery": "3.3.1" }
+  "dependencies": {
+    "jquery": "3.3.1",
+    "jquery-validation": "1.17.0",
+    "jquery-validation-unobtrusive": "3.2.10"
+  }
 }
